--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Print Job ID
-      run: echo "Workflow ${{ GITHUB_RUN_ID }}_${{ GITHUB_WORKFLOW }}"
+      run: echo "Workflow ${{ github.workflow }}_${{ github.run_id }}"
